force-app/main/default/objects/Dev_DLI_Promotion__c/Dev_DLI_Promotion__c.object-meta.xml
<CustomObject>
    <description>Developer Marketing : DLI Promotions</description>
    <label>Dev DLI Promotion</label>
    <nameField>
        <displayFormat>Dev-DLIP-{0000000}</displayFormat>
        <label>Dev DLI Promotion Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dev DLI Promotions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>