force-app/main/default/objects/Dev_DLI_Promotion__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <label>Owner</label>
    <type>Email</type>
</CustomField>