force-app/main/default/objects/Dev_DLI_Promotion__c/fields/Promotion_ID__c.field-meta.xml
<CustomField>
    <fullName>Promotion_ID__c</fullName>
    <externalId>true</externalId>
    <label>Promotion ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>